# rust_ultimate_todo

./: Cargo.toml  README.md
src/: date.rs  event.rs  keys.rs  lib.rs  log.rs  main.rs  model.rs  persist.rs  sort.rs  terminal.rs  theme.rs  tree_walk.rs
src/app/: access.rs  data.rs  edit.rs  load.rs  manipulate.rs  mod.rs  mouse.rs  navigation.rs  progress.rs  save.rs  search.rs  state.rs  stats.rs  tests.rs  undo.rs  visibility.rs
src/app/commands/: id.rs  mod.rs  nav.rs  task.rs
src/ui/: bottom_bar.rs  details.rs  edit.rs  header.rs  help.rs  mod.rs  tree.rs
