[package]
name = "rust_tui"
version = "0.2.0"
edition = "2024"
description = "A very deep, intricate, hierarchical todo list TUI in Rust using Ratatui. Nested tasks, rich properties (priority, status, due dates, tags, descriptions), powerful filters, tree navigation, full edit modal, persistence, undo, and more."
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
crossterm = "0.29"
dirs = "5.0"
ratatui = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
